# ajera-mcp-readonly

./: .env.example  .gitignore  .mcp.json.example  API_CAPABILITY_INVENTORY.md  LICENSE  README.md  ajera_client.py  pyproject.toml  run_tests.py  server.py  test_new_endpoints.py
