[project]
name = "ajera-mcp"
version = "2.0.0"
description = "Read-only MCP server for the Deltek Ajera API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ajera-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
